seaqt/QtWidgets/gen_qwizard.h

class QAbstractButton;
class QMetaObject;
class QPixmap;
class QSize;
class QVariant;
class QWidget;
class QWizard;
class QWizardPage;
typedef struct QAbstractButton QAbstractButton;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QPixmap QPixmap;
typedef struct QSize QSize;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
typedef struct QWizard QWizard;
typedef struct QWizardPage QWizardPage;
void QWizard_connect_currentIdChanged(QWizard* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QWizard_connect_helpRequested(QWizard* self, intptr_t slot, void (*callback)(intptr_t), void (*release)(intptr_t));
void QWizard_connect_customButtonClicked(QWizard* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QWizard_connect_pageAdded(QWizard* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QWizard_connect_pageRemoved(QWizard* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
typedef struct VirtualQWizardPage VirtualQWizardPage;
typedef struct QWizardPage_VTable{
	void (*destructor)(VirtualQWizardPage* self);
	QMetaObject* (*metaObject)(const VirtualQWizardPage* self);
	void* (*metacast)(VirtualQWizardPage* self, const char* param1);
	int (*metacall)(VirtualQWizardPage* self, int param1, int param2, void** param3);
	void (*initializePage)(VirtualQWizardPage* self);
	void (*cleanupPage)(VirtualQWizardPage* self);
	bool (*validatePage)(VirtualQWizardPage* self);
	bool (*isComplete)(const VirtualQWizardPage* self);
	int (*nextId)(const VirtualQWizardPage* self);
	int (*devType)(const VirtualQWizardPage* self);
	void (*setVisible)(VirtualQWizardPage* self, bool visible);
	QSize* (*sizeHint)(const VirtualQWizardPage* self);
	QSize* (*minimumSizeHint)(const VirtualQWizardPage* self);
	int (*heightForWidth)(const VirtualQWizardPage* self, int param1);
	bool (*hasHeightForWidth)(const VirtualQWizardPage* self);
	QPaintEngine* (*paintEngine)(const VirtualQWizardPage* self);
	bool (*event)(VirtualQWizardPage* self, QEvent* event);
	void (*mousePressEvent)(VirtualQWizardPage* self, QMouseEvent* event);
	void (*mouseReleaseEvent)(VirtualQWizardPage* self, QMouseEvent* event);
	void (*mouseDoubleClickEvent)(VirtualQWizardPage* self, QMouseEvent* event);
	void (*mouseMoveEvent)(VirtualQWizardPage* self, QMouseEvent* event);
	void (*wheelEvent)(VirtualQWizardPage* self, QWheelEvent* event);
	void (*keyPressEvent)(VirtualQWizardPage* self, QKeyEvent* event);
	void (*keyReleaseEvent)(VirtualQWizardPage* self, QKeyEvent* event);
	void (*focusInEvent)(VirtualQWizardPage* self, QFocusEvent* event);
	void (*focusOutEvent)(VirtualQWizardPage* self, QFocusEvent* event);
	void (*enterEvent)(VirtualQWizardPage* self, QEnterEvent* event);
	void (*leaveEvent)(VirtualQWizardPage* self, QEvent* event);
	void (*paintEvent)(VirtualQWizardPage* self, QPaintEvent* event);
	void (*moveEvent)(VirtualQWizardPage* self, QMoveEvent* event);
	void (*resizeEvent)(VirtualQWizardPage* self, QResizeEvent* event);
	void (*closeEvent)(VirtualQWizardPage* self, QCloseEvent* event);
	void (*contextMenuEvent)(VirtualQWizardPage* self, QContextMenuEvent* event);
	void (*tabletEvent)(VirtualQWizardPage* self, QTabletEvent* event);
	void (*actionEvent)(VirtualQWizardPage* self, QActionEvent* event);
	void (*dragEnterEvent)(VirtualQWizardPage* self, QDragEnterEvent* event);
	void (*dragMoveEvent)(VirtualQWizardPage* self, QDragMoveEvent* event);
	void (*dragLeaveEvent)(VirtualQWizardPage* self, QDragLeaveEvent* event);
	void (*dropEvent)(VirtualQWizardPage* self, QDropEvent* event);
	void (*showEvent)(VirtualQWizardPage* self, QShowEvent* event);
	void (*hideEvent)(VirtualQWizardPage* self, QHideEvent* event);
	bool (*nativeEvent)(VirtualQWizardPage* self, struct miqt_string eventType, void* message, intptr_t* result);
	void (*changeEvent)(VirtualQWizardPage* self, QEvent* param1);
	int (*metric)(const VirtualQWizardPage* self, int param1);
	void (*initPainter)(const VirtualQWizardPage* self, QPainter* painter);
	QPaintDevice* (*redirected)(const VirtualQWizardPage* self, QPoint* offset);
	QPainter* (*sharedPainter)(const VirtualQWizardPage* self);
	void (*inputMethodEvent)(VirtualQWizardPage* self, QInputMethodEvent* param1);
	QVariant* (*inputMethodQuery)(const VirtualQWizardPage* self, int param1);
	bool (*focusNextPrevChild)(VirtualQWizardPage* self, bool next);
	bool (*eventFilter)(VirtualQWizardPage* self, QObject* watched, QEvent* event);
	void (*timerEvent)(VirtualQWizardPage* self, QTimerEvent* event);
	void (*childEvent)(VirtualQWizardPage* self, QChildEvent* event);
	void (*customEvent)(VirtualQWizardPage* self, QEvent* event);
	void (*connectNotify)(VirtualQWizardPage* self, QMetaMethod* signal);
	void (*disconnectNotify)(VirtualQWizardPage* self, QMetaMethod* signal);
}QWizardPage_VTable;
VirtualQWizardPage* QWizardPage_new(const QWizardPage_VTable* vtbl, size_t vdata, QWidget* parent);
VirtualQWizardPage* QWizardPage_new2(const QWizardPage_VTable* vtbl, size_t vdata);
void QWizardPage_connect_completeChanged(QWizardPage* self, intptr_t slot, void (*callback)(intptr_t), void (*release)(intptr_t));
void QWizardPage_protectedbase_setField(VirtualQWizardPage* self, struct miqt_string name, QVariant* value);
QVariant* QWizardPage_protectedbase_field(const VirtualQWizardPage* self, struct miqt_string name);
void QWizardPage_protectedbase_registerField(VirtualQWizardPage* self, struct miqt_string name, QWidget* widget);
QWizard* QWizardPage_protectedbase_wizard(const VirtualQWizardPage* self);
void QWizardPage_protectedbase_registerField3(VirtualQWizardPage* self, struct miqt_string name, QWidget* widget, const char* property);
void QWizardPage_protectedbase_registerField4(VirtualQWizardPage* self, struct miqt_string name, QWidget* widget, const char* property, const char* changedSignal);
void QWizardPage_protectedbase_updateMicroFocus(VirtualQWizardPage* self);
void QWizardPage_protectedbase_create(VirtualQWizardPage* self);
void QWizardPage_protectedbase_destroy(VirtualQWizardPage* self);
bool QWizardPage_protectedbase_focusNextChild(VirtualQWizardPage* self);
bool QWizardPage_protectedbase_focusPreviousChild(VirtualQWizardPage* self);
QObject* QWizardPage_protectedbase_sender(const VirtualQWizardPage* self);
int QWizardPage_protectedbase_senderSignalIndex(const VirtualQWizardPage* self);
int QWizardPage_protectedbase_receivers(const VirtualQWizardPage* self, const char* signal);
bool QWizardPage_protectedbase_isSignalConnected(const VirtualQWizardPage* self, QMetaMethod* signal);
const QMetaObject* QWizardPage_staticMetaObject();