seaqt/QtWidgets/gen_qwizard.nim

proc fcQWizardPage_protectedbase_setField(self: pointer, name: struct_miqt_string, value: pointer): void {.importc: "QWizardPage_protectedbase_setField".}
proc fcQWizardPage_protectedbase_field(self: pointer, name: struct_miqt_string): pointer {.importc: "QWizardPage_protectedbase_field".}
proc fcQWizardPage_protectedbase_registerField(self: pointer, name: struct_miqt_string, widget: pointer): void {.importc: "QWizardPage_protectedbase_registerField".}
proc fcQWizardPage_protectedbase_wizard(self: pointer, ): pointer {.importc: "QWizardPage_protectedbase_wizard".}
proc fcQWizardPage_protectedbase_registerField3(self: pointer, name: struct_miqt_string, widget: pointer, property: cstring): void {.importc: "QWizardPage_protectedbase_registerField3".}
proc fcQWizardPage_protectedbase_registerField4(self: pointer, name: struct_miqt_string, widget: pointer, property: cstring, changedSignal: cstring): void {.importc: "QWizardPage_protectedbase_registerField4".}
proc fcQWizardPage_protectedbase_updateMicroFocus(self: pointer, ): void {.importc: "QWizardPage_protectedbase_updateMicroFocus".}
proc fcQWizardPage_protectedbase_create(self: pointer, ): void {.importc: "QWizardPage_protectedbase_create".}
proc fcQWizardPage_protectedbase_destroy(self: pointer, ): void {.importc: "QWizardPage_protectedbase_destroy".}
proc fcQWizardPage_protectedbase_focusNextChild(self: pointer, ): bool {.importc: "QWizardPage_protectedbase_focusNextChild".}
proc fcQWizardPage_protectedbase_focusPreviousChild(self: pointer, ): bool {.importc: "QWizardPage_protectedbase_focusPreviousChild".}
proc fcQWizardPage_protectedbase_sender(self: pointer, ): pointer {.importc: "QWizardPage_protectedbase_sender".}
proc fcQWizardPage_protectedbase_senderSignalIndex(self: pointer, ): cint {.importc: "QWizardPage_protectedbase_senderSignalIndex".}
proc fcQWizardPage_protectedbase_receivers(self: pointer, signal: cstring): cint {.importc: "QWizardPage_protectedbase_receivers".}
proc fcQWizardPage_protectedbase_isSignalConnected(self: pointer, signal: pointer): bool {.importc: "QWizardPage_protectedbase_isSignalConnected".}
proc fcQWizardPage_new(vtbl: pointer, parent: pointer): ptr cQWizardPage {.importc: "QWizardPage_new".}
proc fcQWizardPage_new2(vtbl: pointer, ): ptr cQWizardPage {.importc: "QWizardPage_new2".}
proc fcQWizardPage_staticMetaObject(): pointer {.importc: "QWizardPage_staticMetaObject".}

proc metaObject*(self: gen_qwizard_types.QWizard, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQWizard_metaObject(self.h), owned: false)

proc metacast*(self: gen_qwizard_types.QWizard, param1: cstring): pointer =
  fcQWizard_metacast(self.h, param1)

proc metacall*(self: gen_qwizard_types.QWizard, param1: cint, param2: cint, param3: pointer): cint =
  fcQWizard_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type gen_qwizard_types.QWizard, s: cstring): string =
  let v_ms = fcQWizard_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc addPage*(self: gen_qwizard_types.QWizard, page: gen_qwizard_types.QWizardPage): cint =
  fcQWizard_addPage(self.h, page.h)

proc setPage*(self: gen_qwizard_types.QWizard, id: cint, page: gen_qwizard_types.QWizardPage): void =
  fcQWizard_setPage(self.h, id, page.h)

proc removePage*(self: gen_qwizard_types.QWizard, id: cint): void =
  fcQWizard_removePage(self.h, id)

proc page*(self: gen_qwizard_types.QWizard, id: cint): gen_qwizard_types.QWizardPage =
  gen_qwizard_types.QWizardPage(h: fcQWizard_page(self.h, id), owned: false)

proc hasVisitedPage*(self: gen_qwizard_types.QWizard, id: cint): bool =
  fcQWizard_hasVisitedPage(self.h, id)

proc visitedIds*(self: gen_qwizard_types.QWizard, ): seq[cint] =
  var v_ma = fcQWizard_visitedIds(self.h)
  var vx_ret = newSeq[cint](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[cint]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = v_outCast[i]
  c_free(v_ma.data)
  vx_ret

proc pageIds*(self: gen_qwizard_types.QWizard, ): seq[cint] =
  var v_ma = fcQWizard_pageIds(self.h)
  var vx_ret = newSeq[cint](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[cint]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = v_outCast[i]
  c_free(v_ma.data)
  vx_ret

proc setStartId*(self: gen_qwizard_types.QWizard, id: cint): void =
  fcQWizard_setStartId(self.h, id)

proc startId*(self: gen_qwizard_types.QWizard, ): cint =
  fcQWizard_startId(self.h)

proc currentPage*(self: gen_qwizard_types.QWizard, ): gen_qwizard_types.QWizardPage =
  gen_qwizard_types.QWizardPage(h: fcQWizard_currentPage(self.h), owned: false)

proc currentId*(self: gen_qwizard_types.QWizard, ): cint =
  fcQWizard_currentId(self.h)

proc validateCurrentPage*(self: gen_qwizard_types.QWizard, ): bool =
  fcQWizard_validateCurrentPage(self.h)

proc nextId*(self: gen_qwizard_types.QWizard, ): cint =
  fcQWizard_nextId(self.h)

proc setField*(self: gen_qwizard_types.QWizard, name: string, value: gen_qvariant_types.QVariant): void =
  fcQWizard_setField(self.h, struct_miqt_string(data: name, len: csize_t(len(name))), value.h)

proc field*(self: gen_qwizard_types.QWizard, name: string): gen_qvariant_types.QVariant =
  gen_qvariant_types.QVariant(h: fcQWizard_field(self.h, struct_miqt_string(data: name, len: csize_t(len(name)))), owned: true)

proc setWizardStyle*(self: gen_qwizard_types.QWizard, style: cint): void =
  fcQWizard_setWizardStyle(self.h, cint(style))

proc wizardStyle*(self: gen_qwizard_types.QWizard, ): cint =
  cint(fcQWizard_wizardStyle(self.h))

proc setOption*(self: gen_qwizard_types.QWizard, option: cint): void =
  fcQWizard_setOption(self.h, cint(option))

proc testOption*(self: gen_qwizard_types.QWizard, option: cint): bool =
  fcQWizard_testOption(self.h, cint(option))

proc setOptions*(self: gen_qwizard_types.QWizard, options: cint): void =
  fcQWizard_setOptions(self.h, cint(options))

proc options*(self: gen_qwizard_types.QWizard, ): cint =
  cint(fcQWizard_options(self.h))

proc setButtonText*(self: gen_qwizard_types.QWizard, which: cint, text: string): void =
  fcQWizard_setButtonText(self.h, cint(which), struct_miqt_string(data: text, len: csize_t(len(text))))

proc buttonText*(self: gen_qwizard_types.QWizard, which: cint): string =
  let v_ms = fcQWizard_buttonText(self.h, cint(which))
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setButtonLayout*(self: gen_qwizard_types.QWizard, layout: seq[cint]): void =
  var layout_CArray = newSeq[cint](len(layout))
  for i in 0..<len(layout):
    layout_CArray[i] = cint(layout[i])

  fcQWizard_setButtonLayout(self.h, struct_miqt_array(len: csize_t(len(layout)), data: if len(layout) == 0: nil else: addr(layout_CArray[0])))

proc setButton*(self: gen_qwizard_types.QWizard, which: cint, button: gen_qabstractbutton_types.QAbstractButton): void =
  fcQWizard_setButton(self.h, cint(which), button.h)

proc button*(self: gen_qwizard_types.QWizard, which: cint): gen_qabstractbutton_types.QAbstractButton =
  gen_qabstractbutton_types.QAbstractButton(h: fcQWizard_button(self.h, cint(which)), owned: false)

proc setTitleFormat*(self: gen_qwizard_types.QWizard, format: cint): void =
  fcQWizard_setTitleFormat(self.h, cint(format))

proc titleFormat*(self: gen_qwizard_types.QWizard, ): cint =
  cint(fcQWizard_titleFormat(self.h))

proc setSubTitleFormat*(self: gen_qwizard_types.QWizard, format: cint): void =
  fcQWizard_setSubTitleFormat(self.h, cint(format))

proc subTitleFormat*(self: gen_qwizard_types.QWizard, ): cint =
  cint(fcQWizard_subTitleFormat(self.h))

proc setPixmap*(self: gen_qwizard_types.QWizard, which: cint, pixmap: gen_qpixmap_types.QPixmap): void =
  fcQWizard_setPixmap(self.h, cint(which), pixmap.h)

proc pixmap*(self: gen_qwizard_types.QWizard, which: cint): gen_qpixmap_types.QPixmap =
  gen_qpixmap_types.QPixmap(h: fcQWizard_pixmap(self.h, cint(which)), owned: true)

proc setSideWidget*(self: gen_qwizard_types.QWizard, widget: gen_qwidget_types.QWidget): void =
  fcQWizard_setSideWidget(self.h, widget.h)

proc sideWidget*(self: gen_qwizard_types.QWizard, ): gen_qwidget_types.QWidget =
  gen_qwidget_types.QWidget(h: fcQWizard_sideWidget(self.h), owned: false)

proc setDefaultProperty*(self: gen_qwizard_types.QWizard, className: cstring, property: cstring, changedSignal: cstring): void =
  fcQWizard_setDefaultProperty(self.h, className, property, changedSignal)

proc setVisible*(self: gen_qwizard_types.QWizard, visible: bool): void =
  fcQWizard_setVisible(self.h, visible)

proc sizeHint*(self: gen_qwizard_types.QWizard, ): gen_qsize_types.QSize =
  gen_qsize_types.QSize(h: fcQWizard_sizeHint(self.h), owned: true)

proc currentIdChanged*(self: gen_qwizard_types.QWizard, id: cint): void =
  fcQWizard_currentIdChanged(self.h, id)

type QWizardcurrentIdChangedSlot* = proc(id: cint)
proc miqt_exec_callback_cQWizard_currentIdChanged(slot: int, id: cint) {.cdecl.} =
  let nimfunc = cast[ptr QWizardcurrentIdChangedSlot](cast[pointer](slot))
  let slotval1 = id

  nimfunc[](slotval1)

proc miqt_exec_callback_cQWizard_currentIdChanged_release(slot: int) {.cdecl.} =
  let nimfunc = cast[ref QWizardcurrentIdChangedSlot](cast[pointer](slot))
  GC_unref(nimfunc)

proc oncurrentIdChanged*(self: gen_qwizard_types.QWizard, slot: QWizardcurrentIdChangedSlot) =
  var tmp = new QWizardcurrentIdChangedSlot
  tmp[] = slot
  GC_ref(tmp)
  fcQWizard_connect_currentIdChanged(self.h, cast[int](addr tmp[]), miqt_exec_callback_cQWizard_currentIdChanged, miqt_exec_callback_cQWizard_currentIdChanged_release)

proc helpRequested*(self: gen_qwizard_types.QWizard, ): void =
  fcQWizard_helpRequested(self.h)

type QWizardhelpRequestedSlot* = proc()
proc miqt_exec_callback_cQWizard_helpRequested(slot: int) {.cdecl.} =
  let nimfunc = cast[ptr QWizardhelpRequestedSlot](cast[pointer](slot))
  nimfunc[]()

proc miqt_exec_callback_cQWizard_helpRequested_release(slot: int) {.cdecl.} =
  let nimfunc = cast[ref QWizardhelpRequestedSlot](cast[pointer](slot))
  GC_unref(nimfunc)

proc onhelpRequested*(self: gen_qwizard_types.QWizard, slot: QWizardhelpRequestedSlot) =
  var tmp = new QWizardhelpRequestedSlot
  tmp[] = slot
  GC_ref(tmp)
  fcQWizard_connect_helpRequested(self.h, cast[int](addr tmp[]), miqt_exec_callback_cQWizard_helpRequested, miqt_exec_callback_cQWizard_helpRequested_release)

proc customButtonClicked*(self: gen_qwizard_types.QWizard, which: cint): void =
  fcQWizard_customButtonClicked(self.h, which)

type QWizardcustomButtonClickedSlot* = proc(which: cint)
proc miqt_exec_callback_cQWizard_customButtonClicked(slot: int, which: cint) {.cdecl.} =
  let nimfunc = cast[ptr QWizardcustomButtonClickedSlot](cast[pointer](slot))
  let slotval1 = which

  nimfunc[](slotval1)

proc miqt_exec_callback_cQWizard_customButtonClicked_release(slot: int) {.cdecl.} =
  let nimfunc = cast[ref QWizardcustomButtonClickedSlot](cast[pointer](slot))
  GC_unref(nimfunc)

proc oncustomButtonClicked*(self: gen_qwizard_types.QWizard, slot: QWizardcustomButtonClickedSlot) =
  var tmp = new QWizardcustomButtonClickedSlot
  tmp[] = slot
  GC_ref(tmp)
  fcQWizard_connect_customButtonClicked(self.h, cast[int](addr tmp[]), miqt_exec_callback_cQWizard_customButtonClicked, miqt_exec_callback_cQWizard_customButtonClicked_release)

proc pageAdded*(self: gen_qwizard_types.QWizard, id: cint): void =
  fcQWizard_pageAdded(self.h, id)

type QWizardpageAddedSlot* = proc(id: cint)
proc miqt_exec_callback_cQWizard_pageAdded(slot: int, id: cint) {.cdecl.} =
  let nimfunc = cast[ptr QWizardpageAddedSlot](cast[pointer](slot))
  let slotval1 = id

  nimfunc[](slotval1)

proc miqt_exec_callback_cQWizard_pageAdded_release(slot: int) {.cdecl.} =
  let nimfunc = cast[ref QWizardpageAddedSlot](cast[pointer](slot))
  GC_unref(nimfunc)
